test/semantic/good/test1.mC
/* semantically correct in mC */

int x;

void foo () {
  x = 17;
  y = 13;
  return;
}

int y;

void bar () {
  return;
}


